package fr.pasdecalais.assist62api.model;

/**
 * Énumération des types d'actualités.
 */
public enum NewsType {
    /**
     * Pour les informations générales.
     */
    INFO,

    /**
     * Pour les alertes importantes.
     */
    ALERT,

    /**
     * Pour les mises à jour de statut ou de version.
     */
    UPDATE
}
